# E2E-NF

./: .gitattributes  .gitignore  LICENSE  README.md  ThirdPartyNotices.txt  flake.nix  pyproject.toml  requirements.txt
src/e2enf/datasets/: audio_feat_dataset.py
src/e2enf/features/: fixed.py  praat.py  spectrogram.py
src/e2enf/features/f0_utils/: __init__.py  extractor.py  modules.py
src/e2enf/layers/: __init__.py  residual_block.py
src/e2enf/losses/: __init__.py  fml.py  mel.py  reg.py
src/e2enf/models/: generator.py  neuralformants.py
src/e2enf/utils/: audio_io.py  file_io.py  utils.py
src/formant_hifi_gan/datasets/: __init__.py  audio_feat_dataset.py
src/formant_hifi_gan/features/: praat.py  signalgenerator.py  spectral.py  spectrogram.py  world.py
src/formant_hifi_gan/layers/: __init__.py  cheaptrick.py  residual_block.py
src/formant_hifi_gan/losses/: reg.py
src/formant_hifi_gan/models/: __init__.py  discriminator.py  generator.py  hifigan.py  neuralformants.py
src/formant_hifi_gan/utils/: audio_io.py  utils.py
